Fix side icon alignment

--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -410,6 +410,9 @@ $button-size: 1.5rem;
 		}
 	}
 	@media #{$large} {
+		p {
+			display: block;
+		}
 		h3,
 		.bio-photo,
 		p,
